# Arch-Loadout

./: .gitignore  CMakeLists.txt  README.md  install.sh  run
.github/workflows/: build.yml
src/: installworker.cpp  main.cpp  mainwizard.cpp  mainwizard.h  pagehelpers.h
src/pages/: chaoticaurpage.cpp  chaoticaurpage.h  installpage.cpp  installpage.h  systemtoolspage.cpp  systemtoolspage.h  welcomepage.cpp  welcomepage.h
